<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="5dp"
    android:layout_marginTop="5dp"
    android:layout_marginEnd="5dp"
    android:layout_marginBottom="5dp"
    app:cardBackgroundColor="@color/white">


    <LinearLayout
        android:id="@+id/LinearLayoutFood"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/verde_claro"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewProductName"
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:layout_marginStart="15dp"
                android:gravity="center"
                android:text="Product name"
                android:textAlignment="center"
                android:textColor="@color/verde_claro"
                android:textSize="30sp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:gravity="center"
                    android:text="@string/date2"
                    android:textAlignment="center"
                    android:textColor="@color/verde_oscuro"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textViewDateEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/date"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewLot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:gravity="center"
                    android:text="@string/lot2"
                    android:textAlignment="center"
                    android:textColor="@color/verde_claro"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textViewLotEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginBottom="15dp"
                    android:text="Lot number"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:gravity="center"
                    android:text="@string/amount2"
                    android:textAlignment="center"
                    android:textColor="@color/verde_claro"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textViewAmountEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/amount"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewIngredients"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:gravity="center"
                    android:text="@string/ingredients2"
                    android:textAlignment="center"
                    android:textColor="@color/verde_claro"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textViewIngredientsEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/ingredients"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textIncidentsEnd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:gravity="center"
                    android:text="@string/incidents2"
                    android:textAlignment="center"
                    android:textColor="@color/verde_claro"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textViewIncidentsEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/incidents"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textCorrectivesExp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:gravity="center"
                    android:text="@string/correctives2"
                    android:textAlignment="center"
                    android:textColor="@color/verde_claro"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textViewCorrectivesEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/correctives"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewObservations"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:gravity="center"
                    android:text="@string/observations2"
                    android:textAlignment="center"
                    android:textColor="@color/verde_claro"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textViewObservationsEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/observations"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewResponsable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:gravity="center"
                    android:text="@string/responsable2"
                    android:textAlignment="center"
                    android:textColor="@color/verde_claro"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textViewResponsableEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/responsable"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>